--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -7,24 +7,27 @@
     android:background="@color/white">
 
 
-    <android.support.v7.widget.Toolbar android:id="@+id/feed_detail_toolbar"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="?android:attr/actionBarSize"
-                                       android:background="@color/colorPrimary"
-                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                                       android:elevation="4dp"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/feed_detail_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
 
-    <LinearLayout android:id="@+id/comment_container"
-                  android:layout_width="match_parent"
-                  android:layout_height="50dp"
-                  android:layout_alignParentBottom="true"
-                  android:background="#FFFFFF"
-                  android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/comment_container"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
+        android:orientation="vertical">
 
-        <View android:layout_width="match_parent"
-              android:layout_height="1dp"
-              android:background="@color/seperator_color"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/seperator_color"/>
 
         <LinearLayout
             android:id="@+id/comments_entry"
@@ -32,31 +35,31 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <RelativeLayout android:id="@+id/comment_checkbox_container"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:layout_gravity="center_vertical">
+            <FrameLayout
+                android:id="@+id/comment_checkbox_container"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_vertical">
 
-                <CheckBox android:id="@+id/comment_anon_checkbox"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_centerHorizontal="true"
-                          android:button="@drawable/anon_checkbox"
-                          android:clickable="false"/>
+                <CheckBox
+                    android:id="@+id/comment_anon_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:button="@drawable/anon_checkbox"
+                    android:clickable="false"/>
 
-                <TextView android:id="@+id/comment_anon_checkbox_text"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_alignParentBottom="true"
-                          android:layout_centerHorizontal="true"
-                          android:layout_marginBottom="8dp"
-                          android:text="OFF"
-                          android:textColor="@color/twentyfive_black"
-                          android:textSize="@dimen/sub_font_size"
+                <TextView
+                    android:id="@+id/comment_anon_checkbox_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="8dp"
+                    android:text="OFF"
+                    android:textColor="@color/twentyfive_black"
+                    android:textSize="@dimen/sub_font_size"
                 />
-
-
-            </RelativeLayout>
+            </FrameLayout>
 
             <com.linkedin.android.spyglass.ui.MentionsEditText
                 android:id="@+id/comment_field"
@@ -74,34 +77,31 @@
                 tools:text="Hello there eat my ass. I love cock. fight me. swing first. don't dwing first. i need more text to test this comment box out"/>
 
 
-            <RelativeLayout android:id="@+id/comment_send_button_container"
-                            android:layout_width="52dp"
-                            android:layout_height="48dp"
-                            android:layout_gravity="center_vertical">
+            <FrameLayout
+                android:layout_width="52dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_vertical">
 
-                <ImageView
+                <com.linute.linute.UtilsAndHelpers.ToggleImageView
                     android:id="@+id/feed_detail_send_comment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:alpha="0.25"
+                    android:layout_gravity="center"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/icon_send"/>
+                    android:padding="4dp"
+                    android:src="@drawable/ic_upload_picture"/>
 
-                <ProgressBar android:id="@+id/comment_progressbar"
-                             style="?android:attr/progressBarStyleSmall"
-                             android:layout_width="match_parent"
-                             android:layout_height="match_parent"
-                             android:layout_centerInParent="true"
-                             android:layout_margin="10dp"
-                             android:visibility="gone"
+                <ProgressBar
+                    android:id="@+id/comment_progressbar"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:visibility="gone"
                 />
 
-            </RelativeLayout>
+            </FrameLayout>
 
         </LinearLayout>
 
@@ -115,12 +115,13 @@
         android:layout_below="@id/feed_detail_toolbar"
     />
 
-    <android.support.v7.widget.RecyclerView android:id="@+id/feed_detail_mentions"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:layout_above="@id/comment_container"
-                                            android:layout_below="@id/feed_detail_toolbar"
-                                            android:background="@color/white"
-                                            android:visibility="gone"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/feed_detail_mentions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/comment_container"
+        android:layout_below="@id/feed_detail_toolbar"
+        android:background="@color/white"
+        android:visibility="gone"/>
 
 </RelativeLayout>
