--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -115,6 +115,7 @@
         />
 
         <LinearLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
@@ -180,14 +181,21 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:autoLink="web|email"
-                android:textColor="@color/eighty_black"
-                android:textSize="@dimen/sub_font_size"
-                tools:text="test test test teest test testtest test test testtest "/>
+            <!--<TextView-->
+            <!--android:id="@+id/comment"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:autoLink="web|email"-->
+            <!--android:textColor="@color/eighty_black"-->
+            <!--android:textSize="@dimen/sub_font_size"-->
+            <!--tools:text="test test test teest test testtest test test testtest "/>-->
+
+            <!--<ImageView-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:layout_marginTop="2dp"-->
+                <!--android:src="@drawable/background"-->
+            <!--/>-->
 
         </LinearLayout>
     </LinearLayout>
