--- a/app/src/main/res/layout/view_holder_send_to.xml
+++ b/app/src/main/res/layout/view_holder_send_to.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="72dp"
               android:background="?android:attr/selectableItemBackground"
               android:orientation="horizontal">
 
@@ -13,6 +13,7 @@
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_gravity="center_vertical"
         app:riv_border_color="@color/seperator_color"
         app:riv_border_width="1px"
         app:riv_corner_radius="4dp"
