group chat limping along

--- a/app/src/main/res/layout/fragment_search_users.xml
+++ b/app/src/main/res/layout/fragment_search_users.xml
@@ -1,35 +1,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:orientation="vertical"
-              tools:context=".MainContent.Chat.CreateChatFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context=".MainContent.Chat.CreateChatFragment">
 
 
-    <android.support.v7.widget.Toolbar android:id="@+id/search_user_toolbar"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="?attr/actionBarSize"
-                                       android:background="@color/colorPrimary"
-                                       android:elevation="4dp"
-                                       android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/search_user_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
         <EditText
             android:id="@+id/search_users_entry"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/pure_white"
             android:background="@null"
             android:gravity="center_vertical"
-            android:hint="Search for friends..."/>
+            android:hint="Search for friends..."
+            android:textColor="@color/pure_white" />
+
+
 
     </android.support.v7.widget.Toolbar>
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/selected_users"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_users"
