--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -15,12 +15,14 @@
           />
     <TextView
         android:id="@+id/toolbar_chat_user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:textSize="16sp"
         android:textColor="@color/pure_white"
         android:paddingLeft="4dp"
+        android:ellipsize="end"
         />
     <!--balances out "up" arrow, making room information to be properly centered-->
     <Space
