--- a/app/src/main/res/layout/trending_name_header.xml
+++ b/app/src/main/res/layout/trending_name_header.xml
@@ -44,6 +44,14 @@
                 android:textSize="@dimen/header_font_size"
                 tools:text="John Snow"/>
 
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_upload_picture"
+            />
+
             <TextView
                 android:id="@+id/feedDetail_time_stamp"
                 android:layout_width="wrap_content"
