--- a/app/src/main/res/layout/view_holder_send_to_trend.xml
+++ b/app/src/main/res/layout/view_holder_send_to_trend.xml
@@ -28,11 +28,10 @@
 
     <com.linute.linute.UtilsAndHelpers.ToggleImageView
         android:id="@+id/toggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical|end"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:src="@drawable/send_to_checkbox_off"/>
-
+        android:alpha="0.4"
+        android:src="@color/secondaryColor"/>
 
 </FrameLayout>
