--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -12,24 +12,24 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="240dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/group_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"/>
-
-        <TextView
-            android:id="@+id/group_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical|start"/>
+            android:padding="32dp"
+            android:layout_gravity="center"
+            />
+    </FrameLayout>
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/group_name"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|start"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_participants"
