--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -14,10 +14,9 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp">
-
+        android:layout_height="160dp">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/group_image"
+            android:id="@+id/setting_group_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="32dp"
@@ -26,15 +25,42 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/group_name"
+        android:id="@+id/setting_group_name"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical|start"/>
+        android:layout_height="48dp"
+        android:text="Group Name"
+        android:paddingStart="16dp"
+        android:textSize="20sp"
+        android:gravity="center_vertical"/>
+    <TextView
+        android:id="@+id/setting_notifications_button"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:text="Notifications"
+        android:paddingStart="16dp"
+        android:textSize="20sp"
+        android:gravity="center_vertical"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_participants"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:paddingStart="16dp"
+        />
+
+    <TextView
+        android:id="@+id/setting_leave_group"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:textColor="#FFFF0000"
+        android:text="Leave Group"
+        android:paddingStart="16dp"
+        android:textSize="20sp"
+        android:layout_gravity="bottom"
+        android:gravity="center_vertical"
+
+        />
 
 </LinearLayout>
