--- a/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_alignParentStart="true"
-              android:layout_marginBottom="4dp"
-              android:layout_marginEnd="48dp"
-              android:layout_marginStart="12dp"
-              android:layout_marginTop="4dp"
-              android:background="@drawable/chat_item_you"
-              android:orientation="vertical"
-              android:paddingEnd="12dp"
-              android:paddingStart="12dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_marginBottom="4dp"
+    android:layout_marginEnd="48dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginTop="4dp"
+    android:orientation="horizontal">
 
-    <TextView android:id="@+id/chat_user_message"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="..."
-              android:textColor="@color/eighty_black"
-              android:textSize="20sp"
-              android:textStyle="bold"
-    />
+    <com.linute.linute.UtilsAndHelpers.RoundedCornerImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        
+        android:padding="4dp"
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/chat_user_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/chat_item_you"
+        android:orientation="vertical"
+        android:paddingEnd="12dp"
+        android:paddingStart="12dp"
+        android:text="..."
+        android:textColor="@color/eighty_black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
 
