--- a/app/src/main/res/layout/fragment_chat_settings_participant.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_participant.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:orientation="horizontal">
 
-    <com.linute.linute.UtilsAndHelpers.RoundedCornerImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/participant_image"
-        android:padding="6dp"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
+        android:layout_margin="6dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:riv_corner_radius="6dp"
+        />
 
     <TextView
         android:id="@+id/participant_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
+        android:textSize="20sp"
         />
 </LinearLayout>
