--- a/app/src/main/res/layout/fragment_search_user_list_item.xml
+++ b/app/src/main/res/layout/fragment_search_user_list_item.xml
@@ -8,13 +8,12 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal">
 
-    <com.linute.linute.UtilsAndHelpers.RoundedCornerImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/search_users_list_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        app:civ_border_color="@color/seperator_color"
-        app:civ_border_width="1dp"
+        app:riv_corner_radius="6dp"
     />
 
     <TextView
